--- a/myweb/module2Styles/mystyles.css
+++ b/myweb/module2Styles/mystyles.css
@@ -1,6 +1,13 @@
 body{
     background-color: aliceblue;
 }
+div{
+    background-color: gray;
+   
+}
+*{
+    box-sizing: border-box;
+}
 h1{
     text-align: center;
     font-size: 200%;
@@ -8,19 +15,36 @@ h1{
 }
 
 p{
-   border:3px solid black; 
-
+    width:30%;
+   float:left;
+border:2px solid black; 
+padding: 10px;
+margin:10px;
 
 }
-div{
-    background-color: gray;
-    overflow: auto;
-}
+
 
 h2{
 text-align:right;
+background-color: chocolate;
+width:auto;
 }
-#about >h2{
-    background-color: brown;
+
+#about {       
+        float:left;
+        background-color: #A52A2A;
+        
+    }  
+#localVersion{
+background-color: darkkhaki;
+float: left;
 }
+#centralized {
+background-color: darkolivegreen;
+clear:both;
+float:right;
+}
+    
+
+
 
