--- a/myweb/module2Styles/mystyles.css
+++ b/myweb/module2Styles/mystyles.css
@@ -1,50 +1,107 @@
 body{
     background-color: aliceblue;
 }
-div{
-    background-color: gray;
-   
-}
 *{
     box-sizing: border-box;
+    
 }
 h1{
     text-align: center;
     font-size: 200%;
-
+    margin:40px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode',
+     Geneva, Verdana, sans-serif;
 }
-
+section{
+    position: relative;
+    padding: 15px;
+    width:100px;
+}
 p{
-    width:30%;
-   float:left;
-border:2px solid black; 
-padding: 10px;
-margin:10px;
-
+    position: relative;
+    clear: right;
+}
+div{
+    position: relative;
+    background-color: gray;
+    border:3px solid black;
+    width: 100%;
+    margin-left:auto;
+    margin-right: auto;
+    margin-bottom: auto;
 }
 
-
-h2{
-text-align:right;
-background-color: chocolate;
-width:auto;
+.abt{
+    float:right;
+    width:200px;
+   padding:5px;
+   margin:1px;
+   border:2px solid black;
+    background-color: chocolate;
+    font-size: 140%;
+    text-align: center;
+    font-weight: bolder;
 }
 
-#about {       
+.local{
+    float:right;
+    width:200px;
+   padding:5px;
+   margin:1px;
+   border:2px solid black;
+    background-color: brown;
+    font-size: 140%;
+    text-align: center
+}
+.central{
+    float:right;
+    width:250px;
+   padding:5px;
+   margin:3px;
+   border:2px solid black;
+    background-color: fuchsia;
+    font-size: 140%;
+    text-align: center
+}
+.aboutgit{
+    padding: 6px;
+    background-color: gray;
+    color: black;
+    margin:5px;
+    height: 220px;
+    overflow: auto;
+    border:none;
+}
+ .row{
+       width: 95%;
+    }
+    /*desktop*/
+    @media(min-width:992px){
+        .colum-lg-4{
+            float:left;
+            width:33.33%;
+        }
+    }
+/*tablet*/
+@media(min-width:768px) and (max-width:991px){
+    .colmn-md-6{
         float:left;
-        background-color: #A52A2A;
-        
-    }  
-#localVersion{
-background-color: darkkhaki;
-float: left;
+        width:50%;
+        margin-left:auto;
+        margin-right: auto;
+    }
+    .colmn-md-12{
+        float:left;
+        widows: 100px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
-#centralized {
-background-color: darkolivegreen;
-clear:both;
-float:right;
+/*mobile*/
+@media(max-width:767px){
+    .colmn-sm-12{
+        float:left;
+        width: 100%;
+    }
+   
 }
-    
-
-
-
